--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -8,8 +8,9 @@
           "defaultAuthentication": {
             "authenticationType": "API_KEY",
             "apiKeyConfig": {
-              "apiKeyExpirationDays": 30,
-              "description": "api key description"
+              "apiKeyExpirationDays": 365,
+              "apiKeyExpirationDate": "2023-02-07T12:18:43.613Z",
+              "description": "postagramstudioapi"
             }
           },
           "additionalAuthenticationProviders": [
